<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main"
    >

    <TextView
        android:id="@+id/merchantTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_outline_info"
        android:drawablePadding="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Merchant credentials"
        android:textAppearance="?textAppearanceBody1"
        tools:text="Merchant: My Company Ltd."
        />

    <LinearLayout
        android:id="@+id/merchantCredentialsLayout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="Merchant key"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/merchantKeyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:text="a8beecb8-e5ac-4fec-8b8b-6fea97bed02b"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="Merchant password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/merchantPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="TEST_1234567890"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/storeCredentialsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Store"
            />

        <Button
            android:id="@+id/clearCredentialsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Clear"
            />

    </LinearLayout>
</merge>